Fix margin/padding on mobile

--- a/_sass/section.scss
+++ b/_sass/section.scss
@@ -21,7 +21,8 @@
   }
 
   &__content {
-    // padding: 1.5rem;
+    padding: 1.5rem;
+
 
     img {
       border-radius: 10px;
